Budget Planner/force-app/main/default/objects/Budget_Category_Expense__c/Budget_Category_Expense__c.object-meta.xml
<CustomObject>
    <label>Budget Category Expense</label>
    <nameField>
        <displayFormat>BCE-{0000}</displayFormat>
        <label>Budget Category Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Category Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>