Budget Planner/force-app/main/default/objects/Budget_Category_Expense__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Budget Category Expenses</relationshipLabel>
    <relationshipName>Budget_Category_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>