Budget Planner/force-app/main/default/objects/Budget_Category_Expense__c/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <label>Budget Category</label>
    <referenceTo>Budget_Category__c</referenceTo>
    <relationshipLabel>Budget Category Expenses</relationshipLabel>
    <relationshipName>Budget_Category_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>