Budget Planner/force-app/main/default/objects/Budget_Category_Expense__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>