Budget Planner/force-app/main/default/objects/Budget_Category_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Budget_Category__c</columns>
    <columns>Resource_Name__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>